# persalys

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  README  README.rst  README_paraview  README_salome  TODO  VERSION  gui.qrc  persalys.qrc
doc/: CMakeLists.txt  GenericInformation.tex.in  OTGui_Documentation.sty  OTGui_Documentation.tex  OTGui_ExamplesGuide.tex  OTGui_ReferenceGuide.tex  OTGui_UseCasesGuide.tex  OTGui_UserManual.tex  OTGui_summary.tex  OTGui_title.tex  README  otgui_alpha.ipynb
lib/src/base/: AdaoCalibration.cxx  Analysis.cxx  AnalysisImplementation.cxx  AnalysisResult.cxx  AnalyticalPhysicalModel.cxx  AnsysParser.cxx  AppliException.cxx  ApproximationAnalysis.cxx  BaseTools.cxx  CMakeLists.txt  Calculus.cxx  Calculus.hxx  CalculusImplementation.cxx  CalculusImplementation.hxx  CalibrationAnalysis.cxx  CalibrationAnalysisResult.cxx  CopulaInferenceAnalysis.cxx  CopulaInferenceResult.cxx  CopulaInferenceSetResult.cxx  CouplingInputFile.cxx  CouplingOutputFile.cxx  CouplingPhysicalModel.cxx  CouplingResourceFile.cxx  CouplingStep.cxx  DataAnalysis.cxx  DataAnalysisResult.cxx  DataCleaning.cxx  DataCleaningTools.cxx  DataFieldModel.cxx  DataFieldModelImplementation.cxx  DataImport.cxx  DataModel.cxx  DataModelAnalysis.cxx  DataModelImplementation.cxx  DataSample.cxx  DesignOfExperiment.cxx  DesignOfExperimentAnalysis.cxx  DesignOfExperimentEvaluation.cxx  DesignOfExperimentImplementation.cxx  DistributionDictionary.cxx  (+131 more)
lib/src/model/: AnalysisItem.cxx  AnsysSystemTableModel.cxx  AnsysVariableTableModel.cxx  CMakeLists.txt  CalculusItem.cxx  CalculusItem.hxx  CalibrationTableModel.cxx  CentralTendencyItem.cxx  CodeModel.cxx  ComboBoxDelegate.cxx  ComboBoxDelegate.hxx  ConstraintsTableModel.cxx  CorrelationTableModel.cxx  CustomStandardItemModel.cxx  DataCleaningTableModel.cxx  DataFieldModelDefinitionItem.cxx  DataFieldModelDiagramItem.cxx  DataFieldModelItem.cxx  DataMeshItem.cxx  DataModelDefinitionItem.cxx  DataModelDiagramItem.cxx  DataModelItem.cxx  DataModelTableModel.cxx  DataTableModel.cxx  DependenciesTableModel.cxx  DesignOfExperimentDefinitionItem.cxx  DesignOfExperimentItem.cxx  DifferentiationTableModel.cxx  DistributionAnalysisItem.cxx  DistributionAnalysisItem.hxx  DistributionsTableModel.cxx  EnvironmentTableModel.cxx  ExperimentTableModel.cxx  FileTools.cxx  GradientTableModel.cxx  InputTableModel.cxx  InputTableModel.hxx  InputTableProbabilisticModel.cxx  Item.cxx  Item.hxx  (+43 more)
lib/src/view/: AboutDialog.cxx  Actions.cxx  AnalysisExecutionFailedWindow.cxx  AnalysisWindow.cxx  AnalysisWizard.cxx  AnalyticalPhysicalModelWindow.cxx  AnsysWizard.cxx  ApproximationReliabilityPage.cxx  ApproximationResultTabWidget.cxx  ApproximationResultWindow.cxx  (+187 more)
lib/test/: CMakeLists.txt  analytical.xml  t_CalibrationAnalysisWizard_std.cxx  t_CentralTendencyWizard_std.cxx  t_Cogeneration_std.cxx  t_DataModelWindow_std.cxx  t_DesignOfExperimentEvaluationWizard_std.cxx  t_DesignOfExperimentWizard_std.cxx  t_FieldMonteCarloWizard_std.cxx  t_Gauge_std.cxx  t_MainWindow_std.cxx  t_MeshDefinitionWizard_std.cxx  t_MetaModelAnalysisWizard_std.cxx  t_ModelEvaluationWizard_std.cxx  t_MonteCarloResultWindow_std.cxx  t_ObservationsWizard_std.cxx  t_OptimizationWizard_std.cxx  t_PhysicalModel_std.cxx  t_PhysicalModel_std.expout  t_ProbabilisticModelWindow_std.cxx  t_PythonScriptEvaluation_std.cxx  t_PythonScriptEvaluation_std.expout  t_QtTools_std.cxx  t_ReliabilityAnalysisWizard_std.cxx  t_ScreeningAnalysisWizard_std.cxx  t_SensitivityAnalysisWizard_std.cxx  t_SymbolicPhysicalModelWindow_std.cxx  t_WelcomeWindow_std.cxx  t_YACSPhysicalModel_std.cxx  t_yacs_eval.cxx  t_yacs_eval_analytical.cxx  t_yacs_eval_analytical.expout  test_deterministic_analyses.py  test_deterministic_analyses.xml  test_field_analyses.py  test_field_analyses.xml  test_probabilistic_analyses.py
main/: CMakeLists.txt  gui.rc  launcher.cxx  main.cxx  persalys.desktop
python/src/: Analysis.i  AnalysisImplementation.i  AnalysisImplementation_doc.i  AnalysisImplementation_doc.i.in  AnalysisResult.i  AnalysisResult_doc.i  AnalysisResult_doc.i.in  Analysis_doc.i  Analysis_doc.i.in  AnalyticalPhysicalModel.i  AnalyticalPhysicalModel_doc.i.in  AnsysParser.i  AnsysParser_doc.i  ApproximationAnalysis.i  ApproximationAnalysis_doc.i.in  CMakeLists.txt  Calculus.i  CalculusImplementation.i  Calculus_doc.i.in  CalibrationAnalysis.i  CalibrationAnalysisResult.i  CalibrationAnalysisResult_doc.i  CalibrationAnalysis_doc.i  CopulaInferenceAnalysis.i  CopulaInferenceAnalysis_doc.i  CopulaInferenceAnalysis_doc.i.in  CopulaInferenceResult.i  CopulaInferenceResult_doc.i.in  CopulaInferenceSetResult.i  CopulaInferenceSetResult_doc.i.in  CouplingInputFile.i  CouplingInputFile_doc.i  CouplingInputFile_doc.i.in  CouplingOutputFile.i  CouplingOutputFile_doc.i.in  CouplingPhysicalModel.i  CouplingPhysicalModel_doc.i  CouplingPhysicalModel_doc.i.in  CouplingResourceFile.i  CouplingResourceFile_doc.i.in  (+278 more)
python/test/: CMakeLists.txt  DonneesLatin1.csv  Housing-prices-Boston.csv  elNino.csv  gauge.xml  t_AnalyticalPhysicalModel_std.expout  t_AnalyticalPhysicalModel_std.py  t_AnsysParser_std.expout  t_AnsysParser_std.py  t_AxialStressedBeam_std.expout  t_AxialStressedBeam_std.py  t_CalibrationAnalysis_std.expout  t_CalibrationAnalysis_std.py  t_CantileverBeam_std.expout  t_CantileverBeam_std.py  t_Cogeneration_std.expout  t_Cogeneration_std.py  t_CopulaInferenceAnalysis_std.expout  t_CopulaInferenceAnalysis_std.py  t_CouplingPhysicalModel_logistic.expout  t_CouplingPhysicalModel_logistic.py  t_CouplingPhysicalModel_std.expout  t_CouplingPhysicalModel_std.py  t_Crue_std.expout  t_Crue_std.py  t_DataCleaning_std.py  t_DataFieldModel_std.expout  t_DataFieldModel_std.py  t_DataModel_std.expout  t_DataModel_std.py  t_DesignOfExperiment_mp.py  t_DesignOfExperiment_std.expout  t_DesignOfExperiment_std.py  t_Encoding_std.expout  t_Encoding_std.py  t_FMIPhysicalModel_std.py  t_FORMAnalysis_std.expout  t_FORMAnalysis_std.py  t_FORMImportanceSamplingAnalysis_std.expout  t_FORMImportanceSamplingAnalysis_std.py  (+73 more)
(+963 files in other folders)
